# timlyzer

./: Makefile  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml  version-bump.yml
docs/: 01-new-architecture.md  02-implementation-plan.md  02-new-architecture.md  03-implementation-plan.md  04-feature-spec.md  04-tauri-research.md  05-feature-spec.md  06-development-guide.md  06-ui-design-spec.md  07-post-mvp-prd.md  08-development-plan.md  09-progress.md  10-pending-features.md  11-ui-components.md  12-competitive-analysis.md  README.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  database.rs  lib.rs  main.rs  tray.rs
src-tauri/src/services/: active_window.rs  mod.rs  state_monitor.rs  tracker.rs
src/components/layout/: Layout.tsx
src/components/timeline/: TimeRuler.tsx  Timeline.tsx  TimelineTrack.tsx  index.ts
src/components/ui/: ColorPicker.tsx  button.tsx  card.tsx  index.ts
src/i18n/: i18next.d.ts  index.ts
src/i18n/locales/en-US/: common.json  search.json  settings.json  sidebar.json  summary.json  timeline.json  tray.json
src/i18n/locales/zh-CN/: common.json  search.json  settings.json  sidebar.json  summary.json  timeline.json  tray.json
src/lib/: utils.ts
src/pages/: SearchPage.tsx  SettingsPage.tsx  SummaryPage.tsx  TimelinePage.tsx  index.ts
src/services/: tauri-api.ts
src/stores/: settings-store.ts  timeline-store.ts
src/types/: index.ts
